--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,18 @@
   pointer-events: none;
 }
 
+.modal {
+   display:none;
+   visibility: hidden;
+}
+
+.widget {
+	margin-left: 20px;
+	width: 300px;
+        height: 300px;
+	border: 1px solid black;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
